tests/errors/construction/initializer-unknown-field.fn
---
Description: Initializer references a field that does not exist on the type
Expected: FN3203
---

type Vector2
{
    x: f32
    y: f32
    init{}
}

type Program
{
    fn Main -> i32
    {
        var v = Vector2 { x: 1.0, z: 3.0 }
        return 0
    }
}
